feat(script_automator and scene_generator): Separate LLMService instances for validation and fine-tuning purposes.

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,12 +1,12 @@
 {
   "max_outline_generation_attempts": 10,
-  "max_scene_iterations": 5,
+  "max_scene_iterations": 4,
   "good_scene_threshold": 90,
   "full_script_threshold": 90,
   "genre": "psychological sci-fi thriller",
   "context_length": 5000,
-  "_llm_provider": "replicate",
-  "_llm_model": "meta/meta-llama-3-70b-instruct",
+  "llm_provider_validation": "ollama",
+  "llm_model_validation": "gemma2:27b",
   "llm_provider": "ollama",
   "llm_model": "gemma2:27b",
   "llm_fallback_provider": "openai",
