change: minor changes

--- a/config/settings.json
+++ b/config/settings.json
@@ -6,7 +6,7 @@
   "genre": "psychological sci-fi thriller",
   "context_length": 20000,
   "llm_provider": "openai",
-  "llm_model": "antrophic | claude-3.5-sonnet",
+  "llm_model": "openai | gpt-4o",
   "llm_provider_validation": "ollama",
   "llm_model_validation": "gemma2:27b",
   "llm_fallback_provider": "openai",
